--- a/npkpir_23/web/ksiegowa/sub/dokumentyzaksiegowane.xhtml
+++ b/npkpir_23/web/ksiegowa/sub/dokumentyzaksiegowane.xhtml
@@ -143,7 +143,7 @@
         <p:outputPanel id="kontenertabeli"  rendered="#{WpisView.biuroiszef eq true}">
             <p:dataTable  var="wpis" value="#{DokTabView.dokumentylista}" id="dokumentyLista"  filteredValue="#{DokTabView.dokumentyFiltered}" 
                           rowIndexVar="index" 
-                          style="width: 1600px; margin-top: 10px; height: 700px; " rowKey="#{wpis.idDok}" selection="#{DokTabView.gosciuwybral}" 
+                          style="width: 1650px; margin-top: 10px; height: 700px; " rowKey="#{wpis.idDok}" selection="#{DokTabView.gosciuwybral}" 
                           widgetVar="dokTable"
                           rowStyleClass="#{wpis.rodzajedok.rodzajtransakcji eq 'sprzedaz' ? 'old' : (wpis.netto lt 0 ? 'korekta' : null)}" 
                           emptyMessage="W danym miesiącu nie było żadnych zapisów" rowSelectMode="add"
@@ -277,6 +277,9 @@
                 <p:column id="symbol" headerText="symbol"  style="width: 7%; text-align: center;color: blue;" sortBy="#{wpis.pobierzsymbole()}">
                      <h:outputText value="#{wpis.pobierzsymbole()}" 
                                   />
+                </p:column>
+                <p:column width="40" id="niemcy" headerText="niemcy"  style="text-align: center" sortBy="#{wpis.jestniemcy()}">
+                    <h:outputText value="&#x2713;" rendered="#{wpis.jestniemcy()}"  style="color: green;font-weight: bold"/>
                 </p:column>
                 <p:column width="100" id="wprow" headerText="wprow."  >
                     <h:outputText value="#{wpis.wprowadzil}" />
