porpawki wiersze faktury pkpir

--- a/npkpir_23/web/ksiegowaFK/sub/dialog/dialog_bilans_wprowadzanie_2.xhtml
+++ b/npkpir_23/web/ksiegowaFK/sub/dialog/dialog_bilans_wprowadzanie_2.xhtml
@@ -358,8 +358,10 @@
                         </bcf:outputpl>
                     </p:panelGrid>
                     <h:outputText value="Wprowadzenie dwóch i więcej zapisów na tym samym koncie wymaga podania różnych opisów!" style="margin-left: 5px;"/>
+                    
                 </p:column>
             </p:panelGrid>
+            <h:outputText value="Jesli nie ma wprowadzonych wierszy ani dokumentu BO, a na podglądzie bilansu są kwoty proszę wcisnąć przyciski 'zapisz wiersze' i 'nanieś na konta'" style="margin-left: 5px;color: orange;"/>
         </h:form>
     </p:dialog>
 </ui:composition>
