--- a/npkpir_23/web/wspolny/sub/faktura/faktura_kadry.xhtml
+++ b/npkpir_23/web/wspolny/sub/faktura/faktura_kadry.xhtml
@@ -8,7 +8,7 @@
 
     <p:tab title="Naliczenia do faktur">
             <h:form styleClass="kadrypozycja">
-                <p:panelGrid columns="4">
+                <p:panelGrid columns="6">
                     <p:outputLabel value="rok" for="rok" />
                      <p:selectOneMenu id="rok" value="#{wsKadryFakturaPozycjaView.rok}"  style="width: 60px;">
                            <f:selectItems value="#{roki.rokiList}"/>
@@ -18,7 +18,8 @@
                        <f:selectItems value="#{mce.mceList}"/>
                        <p:ajax event="change" partialSubmit="true"/>
                     </p:selectOneMenu>
-                    <p:commandButton styleClass="buttonnorm" style="width: 120px;" actionListener="#{wsKadryFakturaPozycjaView.init()}" value="pobierz" update="@form" />
+                    <p:commandButton styleClass="buttonnorm" style="width: 120px;margin-left: 10px;" actionListener="#{wsKadryFakturaPozycjaView.init()}" value="pobierz" update="@form" />
+                    <p:commandButton styleClass="buttonnorm" style="width: 120px;margin-left: 10px;" actionListener="#{wsKadryFakturaPozycjaView.usun()}" value="usuń wszystkie" update="@form" />
                 </p:panelGrid>
                 <p:outputPanel style="padding: 10px;">
                     <p:dataTable id="datalist" value="#{wsKadryFakturaPozycjaView.wierzfakturybazalist}" var="item111"
