--- a/kadry/src/main/webapp/firma/sub/edycjadanych_firmy.xhtml
+++ b/kadry/src/main/webapp/firma/sub/edycjadanych_firmy.xhtml
@@ -83,7 +83,7 @@
                             </f:facet>
                               <h:outputText value="&#x2714;" styleClass="ww" rendered="#{item1.osobafizyczna}"/>
                         </p:column>
-                        <p:column width="300" sortBy="#{item1.nazwa}" sortOrder="asc"> 
+                        <p:column width="300" sortBy="#{item1.nazwa}" sortOrder="asc" filterBy="#{item1.nazwa}"> 
                             <f:facet name="header">
                                 <h:outputText value="nazwa"/>
                             </f:facet>
