--- a/kadry/src/main/webapp/umowa/sub/dane1_edycja_rozwiazania.xhtml
+++ b/kadry/src/main/webapp/umowa/sub/dane1_edycja_rozwiazania.xhtml
@@ -9,7 +9,7 @@
     <p:panelGrid columns="2" columnClasses="fifty-percent fifty-percent">
             <p:outputPanel>
                 <h:form styleClass="formumowa" id="RozwiazaniaNowyForm">
-                    <p:panel header="dodawanie nowego rozwiązania umowy o pracę" rendered="#{rozwiazanieumowyView.rozwiazanieUmowyNowe.umowa.umowakodzus.praca}">
+                    <p:panel header="dodawanie nowego rozwiązania umowy o pracę" rendered="#{rozwiazanieumowyView.rozwiazanieUmowyNowe.umowa.praca}">
                         <p:panelGrid columns="2" >
                             <h:outputText value="rozwiązywana umowa o pracę: "/>
                                 <h:outputText value="#{rozwiazanieumowyView.rozwiazanieUmowyNowe.umowa.nrkolejny}"/>
