--- a/kadry/src/main/webapp/umowa/sub/dane1_edycja_swiadectwo.xhtml
+++ b/kadry/src/main/webapp/umowa/sub/dane1_edycja_swiadectwo.xhtml
@@ -22,6 +22,8 @@
                             <h:outputText id="urloplpop1" value="#{rozwiazanieumowyView.urlopprezentacja.doswiadectwagodziny}"  style="text-align: right;"/>
                             <p:outputLabel value="dni urlopu tylko z wymiaru roku bieżącego" for="urloplpop1a" />
                             <h:outputText id="urloplpop1a" value="#{rozwiazanieumowyView.urlopprezentacja.doswiadectwadni}" style="text-align: right;" />
+                            <p:outputLabel value="w tym ekwiwalent tylko z wymiaru roku bieżącego" for="urloplpop1aew" />
+                            <h:outputText id="urloplpop1aew" value="#{rozwiazanieumowyView.urlopprezentacja.doswiadectwadniekwiwalent}" style="text-align: right;" />
                             
                             
                     </p:panelGrid>
