--- a/kadry/src/main/webapp/pracownikdane/sub/pracownik_dane.xhtml
+++ b/kadry/src/main/webapp/pracownikdane/sub/pracownik_dane.xhtml
@@ -41,6 +41,8 @@
                         <p:inputText id="niemieckiid" value="#{pracownikDane2View.selected.niemieckipesel}" title="miemiecki id" required="false" requiredMessage="Wpisz Pesel" maxlength="11"/>
                         <p:outputLabel value="nierezydent" for="rez" />
                         <p:selectBooleanCheckbox id="rez" value="#{pracownikDane2View.selected.nierezydent}" title="czy pracownik jest nierezydentem"/>
+                        <p:outputLabel value="płeć" for="płeć" />
+                        <h:outputText id="płeć" value="#{pracownikDane2View.selected.plec}"/>
                      </p:panelGrid>
                     <p:panel header="adres zamieszkania"/>
                     <p:panelGrid columns="8">
