--- a/npkpir_23/web/SessionExpired.xhtml
+++ b/npkpir_23/web/SessionExpired.xhtml
@@ -28,7 +28,7 @@
             const LOCAL_DOMAINS = ["localhost"];
             const LOCAL_DOMAINS_OFFICE = ["192.168.1.90"];
             var czylocal = function() {
-                var zwrot = "http://taxman.pl:8080/npkpir_23";
+                var zwrot = "https://taxman.pl:8181/npkpir_23";
                 if (LOCAL_DOMAINS.includes(window.location.hostname)) {
                   zwrot = "http://localhost:8080/npkpir_23";
                 } else if (LOCAL_DOMAINS_OFFICE.includes(window.location.hostname)) {
