--- a/kadry/src/main/webapp/NMTS.xhtml
+++ b/kadry/src/main/webapp/NMTS.xhtml
@@ -30,7 +30,7 @@
             <p:panel style="text-align: center; margin: 10% auto;  width: 600px; border-style: none;">
                 <h:outputText value="Strona o podanym adresie nie istnieje. Wróć do logowania" style="font-weight: bold;"></h:outputText>
                 <p></p>
-                <form action="http://taxman.pl:8080/kadry">
+                <form action="https://taxman.pl:8181/kadry">
                     <input type="image" value="Zaloguj się ponownie" src="./resources/images/redbutton.png" style="width: 50px; height: 50px;"
                            id="buttonwylogowanie"
                            onmouseover="zielonyobrazek()" onmouseout="czerwonyobrazek()"
