--- a/kadry/src/main/webapp/parametry/sub/edycjadanych_parametry.xhtml
+++ b/kadry/src/main/webapp/parametry/sub/edycjadanych_parametry.xhtml
@@ -287,12 +287,18 @@
                             </f:facet>
                             <p:selectBooleanCheckbox value="#{item11.z33}"/>
                         </p:column>
-                        <p:column style="text-align: center;background-color: #BECEFE;" width="50">
+                        <p:column style="text-align: center;" width="50">
+                            <f:facet name="header">
+                                <h:outputText value="świadczenie rzeczowe"/>
+                            </f:facet>
+                            <p:selectBooleanCheckbox value="#{item11.swiadczenierzeczowe}"/>
+                        </p:column>
+<!--                        <p:column style="text-align: center;background-color: #BECEFE;" width="50">
                             <f:facet name="header">
                                 <h:outputText value="tylko SupPłac"/>
                             </f:facet>
                             <p:selectBooleanCheckbox value="#{item11.tylkosuperplace}"/>
-                        </p:column>
+                        </p:column>-->
                     </p:dataTable>
                     <p:commandButton value="zachowaj" styleClass="buttonnorm" actionListener="#{rodzjawynagrodzeniaSetView.zachowaj}" update="@form"/>
                 </h:form>
