--- a/npkpir_23/web/ksiegowa/sub/layoutStorno/west.xhtml
+++ b/npkpir_23/web/ksiegowa/sub/layoutStorno/west.xhtml
@@ -47,7 +47,7 @@
                     </p:menu>
                     <p:menu rendered="#{WpisView.biuroiszef eq true}">
                         <p:menuitem global="false" value="PIT"  outcome="pitprzegladaj" icon="ui-icon-circle-arrow-e"/>
-                        <p:menuitem global="false" value="#{mgs.VAT}" icon="ui-icon-circle-arrow-e" outcome="vatzest" update="westKsiegowa" rendered="#{WpisView.podatnikObiekt.vatokres.size() gt 0 or WpisView.podatnikObiekt.paramVatUE.size() gt 0 ? true : false}">
+                        <p:menuitem global="false" value="#{mgs.VAT}" icon="ui-icon-circle-arrow-e" outcome="vatzest" update="westKsiegowa" rendered="#{WpisView.vatowiecPlde}">
                         </p:menuitem>
                         <p:menuitem global="false" value="zamknięcie miesiąca"  outcome="zamkniecie" icon="ui-icon-circle-arrow-e"/>
                     </p:menu>
