--- a/npkpir_23/web/ksiegowa/sub/layoutVATZestawienie/west.xhtml
+++ b/npkpir_23/web/ksiegowa/sub/layoutVATZestawienie/west.xhtml
@@ -29,7 +29,7 @@
                 <p:panelGrid columns="1">
                     <p:menu >
                         <p:menuitem global="false" value="powrót"  outcome="dokumentyzaksiegowane" icon="ui-icon-circle-arrow-e"/>
-<!--                        <p:menuitem global="false" value="deklaracja"  outcome="vaty" icon="ui-icon-circle-arrow-e" rendered="#{WpisView.podatnikObiekt.vatokres.size() gt 0 or WpisView.podatnikObiekt.paramVatUE.size() gt 0 ? true : false}"/>-->
+<!--                        <p:menuitem global="false" value="deklaracja"  outcome="vaty" icon="ui-icon-circle-arrow-e" rendered="#{WpisView.vatowiecPlde}"/>-->
 <!--                        <p:menuitem global="false" value="deklaracja"  outcome="vatyN" icon="ui-icon-circle-arrow-e" 
                                     rendered="#{WpisView.podatnikObiekt.vatokres.size() gt 0 ? true : false}">
                         </p:menuitem>
