rozbicie zus do zaswiadczneie niemieckiego

--- a/kadry/src/main/webapp/admin/sub/dialog/dialog_lista_plac_korekta.xhtml
+++ b/kadry/src/main/webapp/admin/sub/dialog/dialog_lista_plac_korekta.xhtml
@@ -7,7 +7,7 @@
 
     xmlns:bcf="http://brzaskun.com/facelets"
     >
-    <p:dialog id="dialoglistaplackorekta" header="Korekta list pląc przekroczenie" widgetVar="dialoglistaplackorekta"  maximizable="true"
+    <p:dialog id="dialoglistaplackorekta" header="Korekta list płac przekroczenie" widgetVar="dialoglistaplackorekta"  maximizable="true"
               resizable="false"  onShow="ustawdialog('dialoglistaplackorekta','centertile',1800,820);" closeOnEscape="true"
               onHide="resetujdialog('dialoglistaplackorekta');" 
               fitViewport="true">
