--- a/kadry/src/main/webapp/wskazniki/sub/wskazniki.xhtml
+++ b/kadry/src/main/webapp/wskazniki/sub/wskazniki.xhtml
@@ -16,6 +16,9 @@
                 <p:tab title="SOKA">
                     <ui:include src="soka.xhtml"/>
                 </p:tab>
+                <p:tab title="ZUS Niemcy">
+                    <ui:include src="zusniemcy.xhtml"/>
+                </p:tab>
             </p:tabView>
         </p:outputPanel>
 </ui:composition>
