--- a/npkpir_23/web/manager/sub/danewszystkichpodatnikow.xhtml
+++ b/npkpir_23/web/manager/sub/danewszystkichpodatnikow.xhtml
@@ -31,7 +31,7 @@
             <h:outputText value="#{podatnik.printnazwa} / "/>
             <h:outputText value="#{podatnik.imie} #{podatnik.nazwisko}"/>
         </p:column>
-        <p:column width="200" headerText="email">
+        <p:column width="200" headerText="email" filterBy="#{podatnik.email}" filterMatchMode="contains">
             <p:inputText value="#{podatnik.email}">
                 <p:ajax event="change" partialSubmit="true" listener="#{podatnicyView.edytuj(podatnik)}"/>
             </p:inputText>
